# SBH

./: .gitignore  CMakeLists.txt  README.md
src/: AntColonyAlgorithm.cpp  AntColonyAlgorithm.hpp  BruteForceAlgorithm.cpp  BruteForceAlgorithm.hpp  GreedyHeuristicAlgorithm.cpp  GreedyHeuristicAlgorithm.hpp  HelloWordl.cpp  LevenshteinDistanceCalc.cpp  LevenshteinDistanceCalc.hpp  SequenceGenerator.cpp  SequenceGenerator.hpp  SequenceReproducer.cpp  SequenceReproducer.hpp  SequenceStructure.hpp  main.cpp
